<?xml version="1.0"?>
<package>
  <name>tiny_usb_cam</name>
  <version>0.0.0</version>
  <description>A tiny USB camera package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="apostolos.georgiadis@gmx.ch">Apostolos Georgiadis</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
